<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sample_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:padding="@dimen/appbar_padding"
        android:background="@color/cardview_light_background"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/sample_output"
        android:layout_marginBottom="398dp"
        android:background="@android:color/darker_gray" />

    <ViewAnimator
        android:id="@+id/sample_output"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="345dp"
            android:layout_height="65dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingTop="30dp"
                android:paddingRight="2dp"
                android:paddingBottom="1dp"
                android:text="@string/EntryMessage" />
        </ScrollView>

    </ViewAnimator>

    <FrameLayout
        android:id="@+id/sample_content_fragment"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_above="@+id/sample_output"
        android:layout_marginBottom="294dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/scam"
        android:layout_width="82dp"
        android:layout_height="55dp"
        android:layout_above="@+id/sample_output"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="59dp"
        android:text="@string/ShowCamera" />

    <Button
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_above="@+id/sample_output"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/Detect">

    </Button>

</RelativeLayout>


